New sphinx stuff

--- a/_modules/forpus/forpus.html
+++ b/_modules/forpus/forpus.html
@@ -383,12 +383,12 @@
 <span class="sd">        In the SVMlight corpus format, each document is succinctly represented</span>
 <span class="sd">        as a sparse vector of word counts. Each line is of the form:</span>
 
-<span class="sd">        ``[c] [feature_1]:[count] [feature_2]:[count] ... [feature_N]:[count]``</span>
+<span class="sd">        ``[c] [term_1]:[count] [term_2]:[count] ... [term_N]:[count]``</span>
 
 <span class="sd">        where ``[c]`` is the identifier of the instance class (in the context</span>
 <span class="sd">        of topic modeling this is 0 for all instances), and the ``[count]``</span>
 <span class="sd">        associated with each term is how many times that term appeared in the</span>
-<span class="sd">        document. Note that ``[feature_1]`` is an integer which indexes the</span>
+<span class="sd">        document. Note that ``[term_1]`` is an integer which indexes the</span>
 <span class="sd">        term; it is not a string. This will be in the file ``corpus.svmlight``.</span>
 
 <span class="sd">        The vocabulary, exactly one term per line, will be in the file</span>
@@ -458,17 +458,17 @@
       </div>
       <div class="sphinxsidebar" role="navigation" aria-label="main navigation">
         <div class="sphinxsidebarwrapper"><p style="font-size: 50px;"><b>Forpus</b></p><br>
-<img src="../../../images/logo.png"><br><br>
+<img src="_static/logo.png"><br><br>
 <img src="https://travis-ci.org/severinsimmler/forpus.svg?branch=master">
 <br><br>
 <p style="font-size: 16px;">
-<a href="https://foo.bar.com/">Getting Started</a></h4>
+<a href="gettingstarted.html">Getting Started</a></h4>
 </p>
 <p style="font-size: 16px;">
-<a href="https://foo.bar.com/">Tutorial</a>
+<a href="tutorial.html">Tutorial</a>
 </p>
 <p style="font-size: 16px;">
-<a href="https://foo.bar.com/">API</a>
+<a href="api.html">API</a>
 </p>
         </div>
       </div>
