New sphinx stuff

--- a/py-modindex.html
+++ b/py-modindex.html
@@ -70,10 +70,7 @@
 <a href="gettingstarted.html">Getting Started</a></h4>
 </p>
 <p style="font-size: 16px;">
-<a href="tutorial.html">Tutorial</a>
-</p>
-<p style="font-size: 16px;">
-<a href="api.html">API</a>
+<a href="gen/forpus.html">API</a>
 </p>
         </div>
       </div>
