--- a/_modules/index.html
+++ b/_modules/index.html
@@ -39,7 +39,7 @@
       </div>
       <div class="sphinxsidebar" role="navigation" aria-label="main navigation">
         <div class="sphinxsidebarwrapper"><p style="font-size: 50px;"><b>Forpus</b></p><br>
-<img src="../_static/logo.png"><br><br>
+<img src="https://github.com/severinsimmler/forpus/raw/master/docs/images/logo.png"><br><br>
 <img src="https://travis-ci.org/severinsimmler/forpus.svg?branch=master">
 <br><br>
 <p style="font-size: 16px;">
