--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
 <img src="https://travis-ci.org/severinsimmler/forpus.svg?branch=master">
 <br><br>
 <p style="font-size: 16px;">
-<a href="gettingstarted.html">Getting Started</a></h4>
+<a href="https://severinsimmler.github.io/forpus/gettingstarted.html">Getting Started</a></h4>
 </p>
 <p style="font-size: 16px;">
-<a href="gen/forpus.html">API</a>
+<a href="https://severinsimmler.github.io/forpus/gen/forpus.html">API</a>
 </p>
         </div>
       </div>
